@@ -51,7 +51,7 @@ public class AdvocateUtil {
 			throw new CustomException(ERROR_WHILE_FETCHING_FROM_ADVOCATE, e.getMessage());
 		}
 
-		List<Advocate> list = advocateResponse.getAdvocates().get(0).getResponseList().stream().filter(advocate -> advocate.getIsActive()==true).collect(Collectors.toList());
+		List<Advocate> list = advocateResponse.getAdvocates().get(0).getResponseList().stream().filter(Advocate::getIsActive).toList();
 
 		return !list.isEmpty();
 	}
